bugfix firefox form overflow

--- a/style.scss
+++ b/style.scss
@@ -79,7 +79,7 @@ body {
 
   #input-form {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
     gap: 1em;
 
     div {
